<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_Book"
    android:orientation="vertical"
    android:background=" #CCE4E3"
    android:padding="20dp"
    >


    <TextView
        android:layout_marginTop="130dp"
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Book"
        android:textColor="#404961"
        android:textSize="32sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="85dp"
        android:gravity="center"
        android:layout_gravity="center"/>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reg_name"
            android:hint="Name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reg_balance"
            android:hint="Phone No"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Genre"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textStyle="bold"
                android:textSize="16dp"
                android:background="#CCD8E9"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Author Name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textStyle="bold"
                android:textSize="16dp"
                android:background="#CCD8E9"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Book Name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/book_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textStyle="bold"
                android:textSize="16dp"
                android:background="#CCD8E9"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="ISBN"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/isbn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textStyle="bold"
                android:textSize="16dp"
                android:background="#CCD8E9"/>

        </com.google.android.material.textfield.TextInputLayout>





        <com.google.android.material.button.MaterialButton
            android:foreground= "?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/btnaddbook"
            android:textColor="@color/white"
            app:backgroundTint="#3c3b6e"
            android:textSize="18sp"
            android:background="#3c3b6e"/>




    </LinearLayout>


</LinearLayout>