<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin_Login"
    android:orientation="vertical"
    android:background="#56658E"
    android:padding="20dp"
    >


    <TextView
        android:id="@+id/logo_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:text="Admin Login"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="30sp"
        android:transitionName="logo_text"
        android:gravity="center"/>

    <TextView
        android:id="@+id/slogan_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="Enter Credentials to Continue "
        android:textColor="#FEFFD9"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Card_no"
            android:hint="Email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_admin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FCC996"
                android:inputType="textEmailAddress"
                android:maxLength="25"
                android:textStyle="bold"
                android:textSize="17dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--<com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone"
            android:hint="Phone / ID"
            android:layout_marginBottom="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:background="#FCC996"
                android:textStyle="bold"
                android:textSize="17dp"/>

        </com.google.android.material.textfield.TextInputLayout>-->

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pin"
            android:hint="Pin"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_admin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="#FCC996"
                android:maxLength="11"
                android:textStyle="bold"
                android:textSize="17dp"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:foreground= "?attr/selectableItemBackground"
            android:id="@+id/btnloginadmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="12dp"
            android:background="#3c3b6e"
            android:text="Enter"
            android:textColor="#303043"
            android:textSize="18sp"
            app:backgroundTint="#FDBEC6"
            android:textStyle="bold"/>



    </LinearLayout>


</LinearLayout>